# mailtc

./: ChangeLog  Makefile  Makefile.am  Makefile.in  README  TODO  aclocal.m4  autogen.sh  config.status  configure  configure.ac  configure.in
autom4te.cache/: output.0  requests  traces.0
cfg/: Makefile.am  main.c  mtc-configdialog.c  mtc-configdialog.h  mtc-envelope.c  mtc-envelope.h  mtc-gresource.xml
example/: AUTHORS  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.status  configure  configure.ac  libtool  plg_dummy.c  plugin.h
example/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
include/: common.h  configdlg.h  core.h  docklet.h  encrypter.h  envelope_large.h  envelope_small.h  filefunc.h  filter.h  filterdlg.h  imapfunc.h  msg.h  netfunc.h  plg_common.h  plg_strings.h  plugfunc.h  plugin.h  popfunc.h  strings.h
plugin/: Makefile.am  Makefile.in  TODO  build  dlplug.c  filter.c  header.h  imapfunc.c  msg.c  mtc-net.c  mtc-net.h  mtc-pop.c  mtc-socket.c  mtc-socket.h  mtc-uid.c  mtc-uid.h  netfunc.c  plg_apop.c  plg_common.c  plg_common.h  plg_imap.c  plg_imapcram.c  plg_imapssl.c  plg_pop.c  plg_popcram.c  plg_popssl.c  plg_strings.h  plugin.h  plugintest  popfunc.c
po/: Makefile  Makefile.in  POTFILES  POTFILES.in  mailtc.pot
resource/: mtc-configdialog.ui
source/: ChangeLog  Makefile.am  README  TODO  autogen.sh  configure.ac
source/plugin/: Makefile.am  mtc-pop.c  mtc-socket.c  mtc-socket.h  mtc-uid.c  mtc-uid.h  pop.c
source/src/: Makefile.am  main.c  mtc-config.c  mtc-config.h  mtc-envelope.c  mtc-envelope.h  mtc-file.c  mtc-file.h  mtc-mail.c  mtc-mail.h  mtc-plugin.c  mtc-plugin.h  mtc-statusicon.c  mtc-statusicon.h  mtc-util.c  mtc-util.h  mtc.h
src/: Makefile  Makefile.am  Makefile.in  common.c  configdlg.c  docklet.c  encrypter.c  envelope_small.h  envelope_white.h  filefunc.c  filterdlg.c  header.h  imapfunc.c  mailtc  mailtc.h  main.c  mtc-account.c  mtc-account.h  mtc-application.c  mtc-application.h  mtc-checker.c  mtc-checker.h  mtc-colour.c  mtc-colour.h  mtc-config.c  mtc-config.h  mtc-configdialog.c  mtc-configdialog.h  mtc-configdialog.ui  mtc-envelope.c  mtc-envelope.h  mtc-extension.c  mtc-extension.h  mtc-file.c  mtc-file.h  mtc-gresource.xml  mtc-mail.c  mtc-mail.h  mtc-marshal.list  mtc-module.c  (+21 more)
src/.deps/: common.P  configdlg.P  docklet.P  eggtrayicon.P  encrypter.P  filefunc.P  filterdlg.P  imapfunc.P  main.P  netfunc.P  popfunc.P  sasl.P  tls.P
tests/: Makefile.am  test-pop.c
web/: index.php  styles.css
